add Native Image and PGO instructions